avoid generic url interning - simply intern as part of creation
GitOrigin-RevId: 0f44e93a8e822a18b77d523572b903ec2d1b1075